@@ -6,7 +6,7 @@ and monitor storage systems using the Self-Monitoring, Analysis and Reporting
 Technology System (SMART) built into most modern ATA and SCSI harddisks.
 In many cases, these utilities will provide advanced warning of disk degradation and failure.
 <h2>Installing</h2>
-To install package click on the smartmontools.pkg icon and follow installation process.
+To install package click on the smartmontools.pkg icon and follow installation process. Files will be installed to the /usr/local/ directory.
 <h2>Usage</h2>
  If you are having trouble understanding the output of smartctl or smartd, please first read the manual pages installed on your system:
 <pre>
